--- a/react-maps/package.json
+++ b/react-maps/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "react-simple-maps": "^2.3.0",
     "react-tooltip": "^4.2.21",
